samples/_failures_safe/1761040016_009218_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34f18889.c: In function ‘main’:
./samples/SAFE/__tmp_34f18889.c:114:9: error: missing terminating " character
  114 |         "2023-10-15T08:35:30 WARNING Performance degradation
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_34f18889.c:114:9: error: expected expression at end of input
./samples/SAFE/__tmp_34f18889.c:114:9: error: expected declaration or statement at end of input
